--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,12 +12,28 @@ export(ngsLCA_profile)
 export(ngsLCA_rank)
 export(ngsLCA_rarefy)
 export(ngsLCA_stratplot)
-import(ComplexHeatmap)
-import(circlize)
 import(ggplot2)
-import(ggthemes)
-import(grid)
-import(vegan)
+importFrom(ComplexHeatmap,Heatmap)
+importFrom(circlize,colorRamp2)
+importFrom(ggthemes,theme_tufte)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(graphics,abline)
+importFrom(grid,gpar)
+importFrom(grid,grid.layout)
+importFrom(grid,grid.newpage)
+importFrom(grid,pushViewport)
+importFrom(grid,unit)
+importFrom(grid,viewport)
 importFrom(reshape,melt)
+importFrom(stats,aggregate)
 importFrom(tidyr,"%>%")
 importFrom(tidyr,separate)
+importFrom(utils,read.csv)
+importFrom(utils,read.delim)
+importFrom(utils,write.table)
+importFrom(vegan,metaMDS)
+importFrom(vegan,rarecurve)
+importFrom(vegan,rarefy)
+importFrom(vegan,specnumber)
+importFrom(vegan,stressplot)
