--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,6 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+URL: https://github.com/wyc661217/ngsLCA
+BugReports: https://github.com/wyc661217/ngsLCA/issues
+Imports: circlize,ComplexHeatmap,ggplot2,ggthemes,graphics,grDevices,grid,reshape,stats,tidyrutils,vegan
