updated ngsLCA_heatmap and ngsLCA_stratplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,16 +15,14 @@ export(ngsLCA_stratplot)
 import(ggplot2)
 importFrom(ComplexHeatmap,Heatmap)
 importFrom(circlize,colorRamp2)
+importFrom(cowplot,save_plot)
+importFrom(ggpubr,ggarrange)
 importFrom(ggthemes,theme_tufte)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(graphics,abline)
 importFrom(grid,gpar)
-importFrom(grid,grid.layout)
-importFrom(grid,grid.newpage)
-importFrom(grid,pushViewport)
 importFrom(grid,unit)
-importFrom(grid,viewport)
 importFrom(reshape,melt)
 importFrom(stats,aggregate)
 importFrom(tidyr,"%>%")
