--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,4 +11,4 @@ LazyData: true
 RoxygenNote: 7.1.1
 URL: https://github.com/wyc661217/ngsLCA
 BugReports: https://github.com/wyc661217/ngsLCA/issues
-Imports: circlize,ComplexHeatmap,ggplot2,ggthemes,graphics,grDevices,grid,reshape,stats,tidyr,utils,vegan
+Imports: circlize,cowplot,ComplexHeatmap,ggplot2,ggpubr,ggthemes,graphics,grDevices,grid,reshape,stats,tidyr,utils,vegan
